Move more stuff into options

--- a/options.html
+++ b/options.html
@@ -4,6 +4,16 @@
   </head>
 
   <body>
+    <label>Subdomain:</label>
+    <input id="subdomain" type="text" />
+
+    <br/><br/>
+
+    <label>Tag regex:</label>
+    <input id="tag-regex" type="text" />
+
+    <br/><br/>
+
     <input id="inline-links" type="checkbox" />
     <label>Inline links?</label>
   </body>
